@@ -106,7 +106,8 @@ else
 		scm_boot_guile(0,NULL,NULL,NULL);
 	],[
 		ac_cv_guile_found=yes
-		AC_DEFINE(HAVE_GUILE)
+		AC_DEFINE(HAVE_GUILE, 1, [Define if the system has a working
+guile installation])
 	],[
 		ac_cv_guile_found=no
 	])
